--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -1,5 +1,12 @@
 {% extends "base_generic.html" %}
 
+
+{% block title %}
+		<title>
+			Real nigga dog shit
+		</title>
+{% endblock %}
+
 {% block content %}
 <h1>Local Library Home</h1>
 
@@ -13,6 +20,7 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Languages:</strong> {{ num_lang }}</li>
   </ul>
 
 {% endblock %}
